fixed dark mode issues

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,115 +7,7 @@
 
 @tailwind components;
 
-.range-slider {
-    margin: auto;
-    text-align: left;
-    position: relative;
-    padding: 0 0 20px 0;
-}
-.range-slider svg,
-.range-slider input[type="range"] {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
-input[type="number"] {
-    border:none;
-    text-align: center;
-    font-size:13px;
-}
-input[type="number"]:invalid,
-input[type="number"]:out-of-range {
-    border:none;
-}
-input[type="range"] {
-    -webkit-appearance: none;
-    width: 100%;
-}
-input[type="range"]:focus {
-    outline: none;
-}
-input[type="range"]:focus::-webkit-slider-runnable-track {
-    background: #2497e3;
-}
-input[type="range"]:focus::-ms-fill-lower {
-    background: #2497e3;
-}
-input[type="range"]:focus::-ms-fill-upper {
-    background: #2497e3;
-}
-input[type="range"]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: #2497e3;
-    border-radius: 1px;
-    box-shadow: none;
-    border: 0;
-}
-input[type="range"]::-webkit-slider-thumb {
-    z-index: 2;
-    position: relative;
-    box-shadow: 0px 0px 0px #000;
-    border: 1px solid #2497e3;
-    height: 18px;
-    width: 18px;
-    border-radius: 25px;
-    background: #a1d0ff;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -7px;
-}
-input[type="range"]::-moz-range-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: #2497e3;
-    border-radius: 1px;
-    box-shadow: none;
-    border: 0;
-}
-input[type="range"]::-moz-range-thumb {
-    z-index: 2;
-    position: relative;
-    box-shadow: 0px 0px 0px #000;
-    border: 1px solid #2497e3;
-    height: 18px;
-    width: 18px;
-    border-radius: 25px;
-    background: #a1d0ff;
-    cursor: pointer;
-}
-input[type="range"]::-ms-track {
-    width: 100%;
-    height: 5px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-input[type="range"]::-ms-fill-lower,
-input[type="range"]::-ms-fill-upper {
-    background: #2497e3;
-    border-radius: 1px;
-    box-shadow: none;
-    border: 0;
-}
-input[type="range"]::-ms-thumb {
-    z-index: 2;
-    position: relative;
-    box-shadow: 0px 0px 0px #000;
-    border: 1px solid #2497e3;
-    height: 18px;
-    width: 18px;
-    border-radius: 25px;
-    background: #a1d0ff;
-    cursor: pointer;
-}
-
+/* ================shop page start */
 /* pricing desc start */
 
 .collapse-item{
@@ -283,6 +175,9 @@ input[type="range"]::-ms-thumb {
     @apply bg-gray-800 px-0 text-sm md:px-6 lg:px-6 xl:px-6 py-2 lg:py-3 xl:py-3 text-gray-100 rounded ml-2 hover:bg-red-600 transition duration-700 ease-in-out relative;
 }
 /* cart page end */
+
+/* =============shop page end */
+
 
 
 /* footer start */
